# racky

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/config-derive/: LICENSE.md
crates/config-derive/src/: lib.rs  util.rs
scripts/: install.ps1  install.sh  release.sh
src/: client.rs  command.rs  config.rs  constants.rs  consts.rs  dirs.rs  ext.rs  installer.rs  lib.rs  logger.rs  main.rs  servers.rs  util.rs  zip.rs
src/cli/: config.rs  install.rs  mod.rs  uninstall.rs  update.rs
src/cli/program/: add.rs  config.rs  list.rs  logs.rs  mod.rs  remove.rs  restart.rs  start.rs  status.rs  stop.rs  update.rs
src/cli/server/: add.rs  change.rs  config.rs  list.rs  logs.rs  mod.rs  reboot.rs  remove.rs  restart.rs  serve.rs  shutdown.rs  start.rs  status.rs  stop.rs  update.rs
src/core/: mod.rs  program.rs
src/server/: mod.rs
src/server/program/: add.rs
src/web/: mod.rs  ping.rs  root.rs
src/web/middleware/: agent.rs  auth.rs
src/web/program/: add.rs  config.rs  list.rs  logs.rs  mod.rs  remove.rs  restart.rs  start.rs  status.rs  stop.rs  update.rs
src/web/server/: config.rs  logs.rs  mod.rs  reboot.rs  restart.rs  shutdown.rs  status.rs  stop.rs  update.rs
