[package]
name = "racky"
version = "0.1.0"
description = "A simple tool to manage your home server with ease"
license = "Apache-2.0"
authors = ["Dervex"]
edition = "2021"

[lib]
name = "racky"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
config-derive = { version = "*", path = "crates/config-derive" }
colored = "3.1.1"
dialoguer = "0.12.0"
directories = "6.0.0"
documented = "0.9.2"
env_logger = "0.11.8"
globenv = "0.2.1"
lazy_static = "1.5.0"
log = "0.4.29"
optfield = "0.4.0"
path-clean = "1.0.1"
self-replace = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
actix-web = "4.12.1"
