[package]
name = "racky"
version = "0.1.0"
description = "A simple tool to manage your home server(s) with ease"
license = "Apache-2.0"
authors = ["Dervex"]
edition = "2024"

[lib]
name = "racky"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["multipart"] }
bytes = "1.11"
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
config-derive = { version = "*", path = "crates/config-derive" }
colored = "3.1.1"
command-group = "5.0.1"
dialoguer = "0.12.0"
directories = "6.0.0"
documented = "0.9.2"
env_logger = "0.11.8"
globenv = "0.2.1"
jiff = "0.2.18"
lazy_static = "1.5.0"
log = "0.4.29"
optfield = "0.4.0"
path-clean = "1.0.1"
regex = "1.12.2"
reqwest = { version = "0.13.2", default-features = false, features = [
    "blocking",
    "form",
    "multipart",
    "rustls",
    "query",
] }
self_update = { version = "0.42.0", default-features = false, features = [
    "archive-zip",
    "compression-zip-deflate",
    "rustls",
    "zip",
] }
serde = { version = "1.0.228", features = ["derive"] }
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
walkdir = "2.5"
zip = "7.2.0"
sysinfo = "0.38.1"
